--- a/PlantPlaces/WebContent/css/styles.css
+++ b/PlantPlaces/WebContent/css/styles.css
@@ -37,6 +37,17 @@
 	bottom:0;
 }
 
+.inputData{
+	background-color:#d6bd91;
+}
+
+.inputData input{
+	margin-left:9em;
+}
+
+.inputData label{
+	position:absolute;
+}
 .printonly{
 	display:none;
 }
